--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apisauce": "^2.1.1",
+    "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuidv4": "^6.2.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
